--- a/ElectricityNetView/chart/template.html
+++ b/ElectricityNetView/chart/template.html
@@ -8,12 +8,11 @@
             <Include>jquery-1.10.2.min.js</Include>
             <Include>highcharts.js</Include>
             <Include>exporting.js</Include>
-		</script>
-		<script type="text/javascript">
-
-            
 		    <Include>chart.js</Include>
 		</script>
+        <style type="text/css">
+            <Include>sytle.css</Include>
+        </style>
 	</head>
 	<body>
 
